# Nefm

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/core/: cli.rs  inference.rs  model.rs  train.rs
src/core/data/: batcher.rs  dataset.rs  tokenizer.rs
