[package]
name = "nefm"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
burn = { version = "0.21", features = ["autodiff", "train", "wgpu"] }
clap = { version = "4.6.1", features = ["derive"] }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokenizers = "0.23.1"
